tests/test181.rael.exp
Error [tests/test181.rael:1:5]: Expected 1 or 2 arguments
| log Range(1, 2, 3, 4, 5)
|     ^
